v1.0.0/modules/schema/pages/class/TroubleTicket.adoc
= `TroubleTicket`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TroubleTicket`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** *`TroubleTicket`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TroubleTicket {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Customer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IncidentHazard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleSymptoms {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CustomerNotification {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ServiceLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UnplannedOutage {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Hazard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleReporter {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TroubleTicket -> Incident: Incident


TroubleTicket -> Location: Location


TroubleTicket -> Customer: Customer


TroubleTicket -> IncidentHazard: IncidentHazard


TroubleTicket -> TroubleSymptoms: TroubleSymptoms


TroubleTicket -> CustomerNotification: Notification


TroubleTicket -> TroubleOrder: TroubleOrder


TroubleTicket -> ServiceLocation: ServiceLocation


TroubleTicket -> UnplannedOutage: UnplannedOutage


TroubleTicket -> Hazard: Hazard


TroubleTicket -> TroubleReporter: TroubleReporter


TroubleTicket -> Status: docStatus


TroubleTicket -> ElectronicAddress: electronicAddress


TroubleTicket -> Status: status


TroubleTicket -> ActivityRecord: ActivityRecord


TroubleTicket -> ConfigurationEvent: ConfigurationEvents


TroubleTicket -> Author: Author


TroubleTicket -> Editor: Editor


TroubleTicket -> Approver: Approver


TroubleTicket -> Issuer: Issuer


TroubleTicket -> DiagramObject: DiagramObjects


TroubleTicket -> InstanceSet: InstanceSet


TroubleTicket -> Name: Names


TroubleTicket -> ChangeSetMember: PropertiesCIMDataObject


TroubleTicket -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ServiceLocation,`ServiceLocation`>>
| 1
| xref::class/ServiceLocation.adoc[`ServiceLocation`]
| +++The service location to which one or more trouble tickets are associated.+++

| <<comment,`comment`>>
| 1
| https://w3id.org/linkml/String[`string`]
| +++Free-form comment associated with the trouble call for example, "customer reported a large flash", etc.+++

| <<multiplePremises,`multiplePremises`>>
| 1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Set to true if the outage report indicated that other neighbors are also out of power.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Customer,`Customer`>>
| 0..1
| xref::class/Customer.adoc[`Customer`]
| +++Customer for whom this trouble ticket is relevant.+++

| <<Incident,`Incident`>>
| 0..1
| xref::class/Incident.adoc[`Incident`]
| +++Incident reported in this trouble ticket+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| n/a

| <<TroubleOrder,`TroubleOrder`>>
| 0..1
| xref::class/TroubleOrder.adoc[`TroubleOrder`]
| +++The order to which one or more trouble tickets are associated.+++

| <<TroubleReporter,`TroubleReporter`>>
| 0..1
| xref::class/TroubleReporter.adoc[`TroubleReporter`]
| n/a

| <<TroubleSymptoms,`TroubleSymptoms`>>
| 0..1
| xref::class/TroubleSymptoms.adoc[`TroubleSymptoms`]
| n/a

| <<UnplannedOutage,`UnplannedOutage`>>
| 0..1
| xref::class/UnplannedOutage.adoc[`UnplannedOutage`]
| +++The unplanned outage to which one or more trouble tickets are associated.+++

| <<dateTimeOfReport,`dateTimeOfReport`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time the trouble has been reported.+++

| <<firstResponderStatus,`firstResponderStatus`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Indicates whether the first responder such as police, fire department etc.has been notified and whether they are on site or en route.+++

| <<reportingKind,`reportingKind`>>
| 0..1
| xref::enumeration/TroubleReportingKind.adoc[`TroubleReportingKind`]
| +++Indicates how the customer reported trouble.+++

| <<resolvedDateTime,`resolvedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this trouble ticket has been resolved.+++

| <<troubleCode,`troubleCode`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Trouble code (e.g., power down, flickering lights, partial power, etc).+++

| <<Hazard,`Hazard`>>
| 0..*
| xref::class/Hazard.adoc[`Hazard`]
| n/a

| <<IncidentHazard,`IncidentHazard`>>
| 0..*
| xref::class/IncidentHazard.adoc[`IncidentHazard`]
| +++All hazards reported with this trouble ticket.+++

| <<Notification,`Notification`>>
| 0..*
| xref::class/CustomerNotification.adoc[`CustomerNotification`]
| +++Notification for this trouble ticket.+++

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free-form comment associated with the trouble call for example, "customer reported a large flash", etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.comment`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Customer]
=== `Customer`
+++Customer for whom this trouble ticket is relevant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.Customer`
| Cardinality
| 0..1
| Type
| xref::class/Customer.adoc[`Customer`]


|===

//[discrete]
[#dateTimeOfReport]
=== `dateTimeOfReport`
+++Date and time the trouble has been reported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.dateTimeOfReport`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#firstResponderStatus]
=== `firstResponderStatus`
+++Indicates whether the first responder such as police, fire department etc.has been notified and whether they are on site or en route.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.firstResponderStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Hazard]
=== `Hazard`


[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.Hazard`
| Cardinality
| 0..*
| Type
| xref::class/Hazard.adoc[`Hazard`]


|===

//[discrete]
[#Incident]
=== `Incident`
+++Incident reported in this trouble ticket+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.Incident`
| Cardinality
| 0..1
| Type
| xref::class/Incident.adoc[`Incident`]


|===

//[discrete]
[#IncidentHazard]
=== `IncidentHazard`
+++All hazards reported with this trouble ticket.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.IncidentHazard`
| Cardinality
| 0..*
| Type
| xref::class/IncidentHazard.adoc[`IncidentHazard`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Location]
=== `Location`


[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#multiplePremises]
=== `multiplePremises`
+++Set to true if the outage report indicated that other neighbors are also out of power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.multiplePremises`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Notification]
=== `Notification`
+++Notification for this trouble ticket.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.Notification`
| Cardinality
| 0..*
| Type
| xref::class/CustomerNotification.adoc[`CustomerNotification`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#reportingKind]
=== `reportingKind`
+++Indicates how the customer reported trouble.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.reportingKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TroubleReportingKind.adoc[`TroubleReportingKind`]


|===

//[discrete]
[#resolvedDateTime]
=== `resolvedDateTime`
+++Date and time this trouble ticket has been resolved.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.resolvedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ServiceLocation]
=== `ServiceLocation`
+++The service location to which one or more trouble tickets are associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.ServiceLocation`
| Cardinality
| 1
| Type
| xref::class/ServiceLocation.adoc[`ServiceLocation`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#troubleCode]
=== `troubleCode`
+++Trouble code (e.g., power down, flickering lights, partial power, etc).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.troubleCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#TroubleOrder]
=== `TroubleOrder`
+++The order to which one or more trouble tickets are associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.TroubleOrder`
| Cardinality
| 0..1
| Type
| xref::class/TroubleOrder.adoc[`TroubleOrder`]


|===

//[discrete]
[#TroubleReporter]
=== `TroubleReporter`


[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.TroubleReporter`
| Cardinality
| 0..1
| Type
| xref::class/TroubleReporter.adoc[`TroubleReporter`]


|===

//[discrete]
[#TroubleSymptoms]
=== `TroubleSymptoms`


[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.TroubleSymptoms`
| Cardinality
| 0..1
| Type
| xref::class/TroubleSymptoms.adoc[`TroubleSymptoms`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#UnplannedOutage]
=== `UnplannedOutage`
+++The unplanned outage to which one or more trouble tickets are associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TroubleTicket.UnplannedOutage`
| Cardinality
| 0..1
| Type
| xref::class/UnplannedOutage.adoc[`UnplannedOutage`]


|===


